#
# Makefile.am for libstorage/storage/Devices
#

noinst_LTLIBRARIES = libdevices.la

libdevices_la_SOURCES =					\
	Device.h		Device.cc		\
	DeviceImpl.h		DeviceImpl.cc		\
	BlkDevice.h		BlkDevice.cc		\
	BlkDeviceImpl.h		BlkDeviceImpl.cc	\
	Disk.h			Disk.cc			\
	DiskImpl.h		DiskImpl.cc		\
	Md.h			Md.cc			\
	MdImpl.h		MdImpl.cc		\
	Partitionable.h		Partitionable.cc	\
	PartitionableImpl.h	PartitionableImpl.cc	\
	PartitionTable.h	PartitionTable.cc	\
	PartitionTableImpl.h	PartitionTableImpl.cc	\
	Msdos.h			Msdos.cc		\
	MsdosImpl.h		MsdosImpl.cc		\
	Gpt.h			Gpt.cc			\
	GptImpl.h		GptImpl.cc		\
	Partition.h		Partition.cc		\
	PartitionImpl.h		PartitionImpl.cc	\
	LvmPv.h			LvmPv.cc		\
	LvmPvImpl.h		LvmPvImpl.cc		\
	LvmVg.h			LvmVg.cc		\
	LvmVgImpl.h		LvmVgImpl.cc		\
	LvmLv.h			LvmLv.cc		\
	LvmLvImpl.h		LvmLvImpl.cc		\
	Encryption.h		Encryption.cc		\
	EncryptionImpl.h	EncryptionImpl.cc	\
	Luks.h			Luks.cc			\
	LuksImpl.h		LuksImpl.cc		\
	Filesystem.h		Filesystem.cc		\
	FilesystemImpl.h	FilesystemImpl.cc	\
	Ext4.h			Ext4.cc			\
	Ext4Impl.h		Ext4Impl.cc		\
	Btrfs.h			Btrfs.cc		\
	BtrfsImpl.h		BtrfsImpl.cc		\
	Xfs.h			Xfs.cc			\
	XfsImpl.h		XfsImpl.cc		\
	Ntfs.h			Ntfs.cc			\
	NtfsImpl.h		NtfsImpl.cc		\
	Vfat.h			Vfat.cc			\
	VfatImpl.h		VfatImpl.cc		\
	Swap.h			Swap.cc			\
	SwapImpl.h		SwapImpl.cc

pkgincludedir = $(includedir)/storage/Devices

pkginclude_HEADERS =		\
	Device.h		\
	BlkDevice.h		\
	Disk.h			\
	Md.h			\
	Partitionable.h		\
	PartitionTable.h	\
	Msdos.h			\
	Gpt.h			\
	Partition.h		\
	LvmPv.h			\
	LvmVg.h			\
	LvmLv.h			\
	Encryption.h		\
	Luks.h			\
	Filesystem.h		\
	Ext4.h			\
	Swap.h

