#
# Makefile.am for libstorage/storage/Devices
#

noinst_LTLIBRARIES = libdevices.la

libdevices_la_SOURCES =					\
	Device.h		Device.cc		\
	DeviceImpl.h		DeviceImpl.cc		\
	BlkDevice.h		BlkDevice.cc		\
	BlkDeviceImpl.h		BlkDeviceImpl.cc	\
	Disk.h			Disk.cc			\
	DiskImpl.h		DiskImpl.cc		\
	Dasd.h			Dasd.cc			\
	DasdImpl.h		DasdImpl.cc		\
	Multipath.h		Multipath.cc		\
	MultipathImpl.h		MultipathImpl.cc	\
	DmRaid.h		DmRaid.cc		\
	DmRaidImpl.h		DmRaidImpl.cc		\
	Md.h			Md.cc			\
	MdImpl.h		MdImpl.cc		\
	MdContainer.h		MdContainer.cc		\
	MdContainerImpl.h	MdContainerImpl.cc	\
	MdMember.h		MdMember.cc		\
	MdMemberImpl.h		MdMemberImpl.cc		\
	Partitionable.h		Partitionable.cc	\
	PartitionableImpl.h	PartitionableImpl.cc	\
	PartitionTable.h	PartitionTable.cc	\
	PartitionTableImpl.h	PartitionTableImpl.cc	\
	Msdos.h			Msdos.cc		\
	MsdosImpl.h		MsdosImpl.cc		\
	Gpt.h			Gpt.cc			\
	GptImpl.h		GptImpl.cc		\
	DasdPt.h		DasdPt.cc		\
	DasdPtImpl.h		DasdPtImpl.cc		\
	ImplicitPt.h		ImplicitPt.cc		\
	ImplicitPtImpl.h	ImplicitPtImpl.cc	\
	Partition.h		Partition.cc		\
	PartitionImpl.h		PartitionImpl.cc	\
	StrayBlkDevice.h	StrayBlkDevice.cc	\
	StrayBlkDeviceImpl.h	StrayBlkDeviceImpl.cc	\
	LvmPv.h			LvmPv.cc		\
	LvmPvImpl.h		LvmPvImpl.cc		\
	LvmVg.h			LvmVg.cc		\
	LvmVgImpl.h		LvmVgImpl.cc		\
	LvmLv.h			LvmLv.cc		\
	LvmLvImpl.h		LvmLvImpl.cc		\
	Encryption.h		Encryption.cc		\
	EncryptionImpl.h	EncryptionImpl.cc	\
	PlainEncryption.h	PlainEncryption.cc	\
	PlainEncryptionImpl.h	PlainEncryptionImpl.cc	\
	Luks.h			Luks.cc			\
	LuksImpl.h		LuksImpl.cc		\
	Bcache.h		Bcache.cc		\
	BcacheImpl.h		BcacheImpl.cc		\
	BcacheCset.h		BcacheCset.cc		\
	BcacheCsetImpl.h	BcacheCsetImpl.cc

pkgincludedir = $(includedir)/storage/Devices

pkginclude_HEADERS =		\
	Device.h		\
	BlkDevice.h		\
	Disk.h			\
	Dasd.h			\
	DmRaid.h		\
	Multipath.h		\
	Md.h			\
	MdContainer.h		\
	MdMember.h		\
	Partitionable.h		\
	PartitionTable.h	\
	Msdos.h			\
	Gpt.h			\
	DasdPt.h		\
	ImplicitPt.h		\
	Partition.h		\
	StrayBlkDevice.h	\
	LvmPv.h			\
	LvmVg.h			\
	LvmLv.h			\
	Encryption.h		\
	PlainEncryption.h	\
	Luks.h			\
	Bcache.h		\
	BcacheCset.h

