#
# Makefile.am for libstorage/storage/Filesystems
#

noinst_LTLIBRARIES = libfilesystems.la

libfilesystems_la_SOURCES =				\
	Filesystem.h		Filesystem.cc		\
	FilesystemImpl.h	FilesystemImpl.cc	\
	Ext4.h			Ext4.cc			\
	Ext4Impl.h		Ext4Impl.cc		\
	Btrfs.h			Btrfs.cc		\
	BtrfsImpl.h		BtrfsImpl.cc		\
	Xfs.h			Xfs.cc			\
	XfsImpl.h		XfsImpl.cc		\
	Ntfs.h			Ntfs.cc			\
	NtfsImpl.h		NtfsImpl.cc		\
	Vfat.h			Vfat.cc			\
	VfatImpl.h		VfatImpl.cc		\
	Swap.h			Swap.cc			\
	SwapImpl.h		SwapImpl.cc

pkgincludedir = $(includedir)/storage/Filesystems

pkginclude_HEADERS =		\
	Filesystem.h		\
	Ext4.h			\
	Btrfs.h 		\
	Xfs.h 			\
	Ntfs.h 			\
	Vfat.h			\
	Swap.h

