#
# Makefile.am for libstorage/storage/Filesystems
#

noinst_LTLIBRARIES = libfilesystems.la

libfilesystems_la_SOURCES =				\
	Mountable.h		Mountable.cc		\
	MountableImpl.h		MountableImpl.cc	\
	Filesystem.h		Filesystem.cc		\
	FilesystemImpl.h	FilesystemImpl.cc	\
	BlkFilesystem.h		BlkFilesystem.cc	\
	BlkFilesystemImpl.h	BlkFilesystemImpl.cc	\
	Ext.h			Ext.cc			\
	ExtImpl.h		ExtImpl.cc		\
	Ext2.h			Ext2.cc			\
	Ext2Impl.h		Ext2Impl.cc		\
	Ext3.h			Ext3.cc			\
	Ext3Impl.h		Ext3Impl.cc		\
	Ext4.h			Ext4.cc			\
	Ext4Impl.h		Ext4Impl.cc		\
	Btrfs.h			Btrfs.cc		\
	BtrfsImpl.h		BtrfsImpl.cc		\
	Reiserfs.h		Reiserfs.cc		\
	ReiserfsImpl.h		ReiserfsImpl.cc		\
	Xfs.h			Xfs.cc			\
	XfsImpl.h		XfsImpl.cc		\
	Ntfs.h			Ntfs.cc			\
	NtfsImpl.h		NtfsImpl.cc		\
	Vfat.h			Vfat.cc			\
	VfatImpl.h		VfatImpl.cc		\
	Iso9660.h		Iso9660.cc		\
	Iso9660Impl.h		Iso9660Impl.cc		\
	Udf.h			Udf.cc			\
	UdfImpl.h		UdfImpl.cc		\
	Swap.h			Swap.cc			\
	SwapImpl.h		SwapImpl.cc		\
	Nfs.h			Nfs.cc			\
	NfsImpl.h		NfsImpl.cc

pkgincludedir = $(includedir)/storage/Filesystems

pkginclude_HEADERS =		\
	Mountable.h		\
	Filesystem.h		\
	BlkFilesystem.h		\
	Ext.h			\
	Ext2.h			\
	Ext3.h			\
	Ext4.h			\
	Btrfs.h 		\
	Reiserfs.h 		\
	Xfs.h 			\
	Ntfs.h 			\
	Vfat.h			\
	Iso9660.h		\
	Udf.h			\
	Swap.h			\
	Nfs.h

