#
# Makefile.am for libstorage/storage/Filesystems
#

noinst_LTLIBRARIES = libfilesystems.la

libfilesystems_la_SOURCES =				\
	MountPoint.h		MountPoint.cc		\
	MountPointImpl.h	MountPointImpl.cc	\
	Mountable.h		Mountable.cc		\
	MountableImpl.h		MountableImpl.cc	\
	Filesystem.h		Filesystem.cc		\
	FilesystemImpl.h	FilesystemImpl.cc	\
	BlkFilesystem.h		BlkFilesystem.cc	\
	BlkFilesystemImpl.h	BlkFilesystemImpl.cc	\
	Ext.h			Ext.cc			\
	ExtImpl.h		ExtImpl.cc		\
	Ext2.h			Ext2.cc			\
	Ext2Impl.h		Ext2Impl.cc		\
	Ext3.h			Ext3.cc			\
	Ext3Impl.h		Ext3Impl.cc		\
	Ext4.h			Ext4.cc			\
	Ext4Impl.h		Ext4Impl.cc		\
	Bcachefs.h		Bcachefs.cc		\
	BcachefsImpl.h		BcachefsImpl.cc		\
	Btrfs.h			Btrfs.cc		\
	BtrfsImpl.h		BtrfsImpl.cc		\
	BtrfsSubvolume.h	BtrfsSubvolume.cc	\
	BtrfsSubvolumeImpl.h	BtrfsSubvolumeImpl.cc	\
	BtrfsQgroup.h		BtrfsQgroup.cc		\
	BtrfsQgroupImpl.h	BtrfsQgroupImpl.cc	\
	Reiserfs.h		Reiserfs.cc		\
	ReiserfsImpl.h		ReiserfsImpl.cc		\
	Xfs.h			Xfs.cc			\
	XfsImpl.h		XfsImpl.cc		\
	Jfs.h			Jfs.cc			\
	JfsImpl.h		JfsImpl.cc		\
	Ntfs.h			Ntfs.cc			\
	NtfsImpl.h		NtfsImpl.cc		\
	Vfat.h			Vfat.cc			\
	VfatImpl.h		VfatImpl.cc		\
	Exfat.h			Exfat.cc		\
	ExfatImpl.h		ExfatImpl.cc		\
	Iso9660.h		Iso9660.cc		\
	Iso9660Impl.h		Iso9660Impl.cc		\
	Udf.h			Udf.cc			\
	UdfImpl.h		UdfImpl.cc		\
	Squashfs.h		Squashfs.cc		\
	SquashfsImpl.h		SquashfsImpl.cc		\
	Swap.h			Swap.cc			\
	Erofs.h			Erofs.cc		\
	ErofsImpl.h		ErofsImpl.cc		\
	SwapImpl.h		SwapImpl.cc		\
	Nfs.h			Nfs.cc			\
	NfsImpl.h		NfsImpl.cc		\
	Tmpfs.h			Tmpfs.cc		\
	TmpfsImpl.h		TmpfsImpl.cc		\
	F2fs.h			F2fs.cc			\
	F2fsImpl.h		F2fsImpl.cc		\
	Nilfs2.h		Nilfs2.cc		\
	Nilfs2Impl.h		Nilfs2Impl.cc		\
	Bitlocker.h		Bitlocker.cc		\
	BitlockerImpl.h		BitlockerImpl.cc

pkgincludedir = $(includedir)/storage/Filesystems

pkginclude_HEADERS =		\
	MountPoint.h		\
	Mountable.h		\
	Filesystem.h		\
	BlkFilesystem.h		\
	Ext.h			\
	Ext2.h			\
	Ext3.h			\
	Ext4.h			\
	Bcachefs.h		\
	Btrfs.h 		\
	BtrfsSubvolume.h	\
	BtrfsQgroup.h		\
	Reiserfs.h 		\
	Xfs.h 			\
	Jfs.h			\
	Ntfs.h 			\
	Vfat.h			\
	Exfat.h			\
	Iso9660.h		\
	Udf.h			\
	Squashfs.h		\
	Erofs.h			\
	Swap.h			\
	Nfs.h			\
	Tmpfs.h			\
	F2fs.h			\
	Nilfs2.h		\
	Bitlocker.h

