#
# Makefile.am for libstorage/storage/Holders
#

noinst_LTLIBRARIES = libholders.la

libholders_la_SOURCES =					\
	Holder.h		Holder.cc		\
	HolderImpl.h		HolderImpl.cc		\
	User.h			User.cc			\
	UserImpl.h		UserImpl.cc		\
	MdUser.h		MdUser.cc		\
	MdUserImpl.h		MdUserImpl.cc		\
	FilesystemUser.h	FilesystemUser.cc	\
	FilesystemUserImpl.h	FilesystemUserImpl.cc	\
	Subdevice.h		Subdevice.cc		\
	SubdeviceImpl.h		SubdeviceImpl.cc

pkgincludedir = $(includedir)/storage/Holders

pkginclude_HEADERS =		\
	Holder.h		\
	User.h			\
	MdUser.h		\
	FilesystemUser.h	\
	Subdevice.h

