#
# Makefile.am for libstorage/storage/SystemInfo
#

noinst_LTLIBRARIES = libsysteminfo.la

libsysteminfo_la_SOURCES =				\
	SystemInfo.cc		SystemInfo.h		\
	Arch.cc			Arch.h			\
	CmdBlkid.cc		CmdBlkid.h		\
	CmdBtrfs.cc		CmdBtrfs.h		\
	CmdCryptsetup.cc	CmdCryptsetup.h		\
	CmdDasdview.cc		CmdDasdview.h		\
	CmdDmraid.cc		CmdDmraid.h		\
	CmdDmsetup.cc		CmdDmsetup.h		\
	CmdLsscsi.cc		CmdLsscsi.h		\
	CmdLvm.cc		CmdLvm.h		\
	CmdMultipath.cc		CmdMultipath.h		\
	CmdParted.cc		CmdParted.h		\
	CmdUdevadm.cc		CmdUdevadm.h		\
	DevAndSys.cc		DevAndSys.h		\
	ProcMdstat.cc		ProcMdstat.h		\
	ProcMounts.cc		ProcMounts.h		\
	ProcParts.cc		ProcParts.h

