#
# Makefile.am for libstorage/storage/SystemInfo
#

noinst_LTLIBRARIES = libsystem-info.la

libsystem_info_la_SOURCES =				\
	SystemInfo.cc		SystemInfo.h		\
	Arch.cc			Arch.h			\
	CmdBlkid.cc		CmdBlkid.h		\
	CmdBtrfs.cc		CmdBtrfs.h		\
	CmdCryptsetup.cc	CmdCryptsetup.h		\
	CmdDasdview.cc		CmdDasdview.h		\
	CmdDf.cc		CmdDf.h			\
	CmdDmraid.cc		CmdDmraid.h		\
	CmdDmsetup.cc		CmdDmsetup.h		\
	CmdLsattr.cc		CmdLsattr.h		\
	CmdLsscsi.cc		CmdLsscsi.h		\
	CmdLvm.cc		CmdLvm.h		\
	CmdMultipath.cc		CmdMultipath.h		\
	CmdParted.cc		CmdParted.h		\
	CmdStat.cc		CmdStat.h		\
	CmdUdevadm.cc		CmdUdevadm.h		\
	DevAndSys.cc		DevAndSys.h		\
	ProcMdstat.cc		ProcMdstat.h		\
	ProcMounts.cc		ProcMounts.h

pkgincludedir = $(includedir)/storage/SystemInfo

pkginclude_HEADERS =		\
	Arch.h
