#
# Makefile.am for libstorage/testsuite/helpers
#

noinst_LTLIBRARIES = libhelpers.la

libhelpers_la_SOURCES =					\
	TsCmp.cc		TsCmp.h

noinst_PROGRAMS =	\
	echoargs	\
	echoargs_stderr	\
	echoargs_mixed	\
	retcode		\
	segfaulter

echoargs_SOURCES		= echoargs.cc
echoargs_stderr_SOURCES		= echoargs_stderr.cc
echoargs_mixed_SOURCES		= echoargs_mixed.cc
retcode_SOURCES			= retcode.cc
segfaulter_SOURCES		= segfaulter.cc
