#
# Makefile.am for libstorage/testsuite/helpers
#

noinst_LTLIBRARIES = libhelpers.la

libhelpers_la_SOURCES =						\
	TsCmp.cc		TsCmp.h				\
	CallbacksRecorder.cc	CallbacksRecorder.h		\
	output.h

noinst_PROGRAMS =	\
	echoargs	\
	echoargs_stderr	\
	echoargs_mixed	\
	repeat		\
	retcode		\
	segfaulter

AM_DEFAULT_SOURCE_EXT = .cc

